feat: mejorar la validación de credenciales en el PEP
